feat(ScheduleJob): Create reference to other collection (time series points)

--- a/services/service/Dockerfile
+++ b/services/service/Dockerfile
@@ -7,7 +7,8 @@ RUN /usr/bin/crontab /app/crontab.txt
 WORKDIR /app
 
 # Install the dependenciess
-ENV MONGODB_URI="mongodb://home-assignment-db:27017/testdb"
+ENV MONGODB_URI="mongodb://root:pass@home-assignment-db:27017/testdb?authSource=admin"
+ENV ALPHAVANTAGE_API_KEY="D6EIAVJ29RGHA4LG"
 RUN yarn install
 RUN yarn build
 
