--- a/services/service/package.json
+++ b/services/service/package.json
@@ -17,6 +17,7 @@
     "start": "yarn build && node dist/bundle.cjs "
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
