feat(): Use clean arch in service, fill data on save

--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 
 # Install the dependenciess
 ENV MONGODB_URI="mongodb://root:pass@home-assignment-db:27017/testdb?authSource=admin"
+ENV ALPHAVANTAGE_API_KEY="BIB11DF9ITV6EYUM"
 RUN yarn install
 
 EXPOSE 8080
