--- a/services/api/package.json
+++ b/services/api/package.json
@@ -17,6 +17,7 @@
     "poststart": "webpack --config webpack.dev.cjs"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.12"
